--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.16.2",
     "google-auth-library": "^0.12.0",
     "googleapis": "^23.0.0",
-    "mongoose": "^4.13.6"
+    "mongoose": "^4.13.6",
+    "pug": "^2.0.0-rc.4"
   }
 }
