--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,11 @@
   "private": true,
   "proxy": "http://localhost:3001/",
   "dependencies": {
+    "bootstrap": "^3.3.7",
+    "moment": "^2.20.1",
     "react": "^16.2.0",
+    "react-bootstrap-datetimepicker": "0.0.22",
+    "react-datetime": "^2.11.1",
     "react-dom": "^16.2.0",
     "react-scripts": "1.0.17"
   },
